# tracepatch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml  tracepatch.toml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: api-reference.md  cli-guide.md  configuration.md  data-science.md  quickstart.md  reading-logs.md  reading-tree.md
src/tracepatch/: __init__.py  _cli_output.py  _codegen.py  _educational.py  _flamegraph.py  _git.py  _introspect.py  _jupyter.py  _pipeline.py  _render.py  _setup.py  _trace.py  cli.py  config.py  instrumentation.py  py.typed  pytest_plugin.py
src/tracepatch/integrations/: __init__.py  django.py  fastapi.py  flask.py  wsgi.py
