[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracepatch"
version = "0.2.0"
description = "Focused, opt-in runtime call tracing for a single execution context."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "tracepatch contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
keywords = ["tracing", "debugging", "profiling", "call-tree"]
dependencies = [
    "tomli>=2.0.0; python_version<'3.11'",
]

[project.scripts]
tracepatch = "tracepatch.cli:main"
tph = "tracepatch.cli:main"

[project.urls]
Homepage = "https://github.com/levinismynameirl/tracepatch"
Documentation = "https://github.com/levinismynameirl/tracepatch#readme"
Repository = "https://github.com/levinismynameirl/tracepatch"
Issues = "https://github.com/levinismynameirl/tracepatch/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tracepatch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
config-save = [
    "tomli-w>=1.0.0",
]
